--- a/Project03/makefile
+++ b/Project03/makefile
@@ -4,7 +4,7 @@ NAME = MyShell
 all: $(NAME)
 
 MyShell: $(OBJS)
-	g++ $(OBJS) -l readline -o $(NAME)
+	g++ -ggdb3 $(OBJS) -l readline -o $(NAME)
 	
 clean:
 	rm -rf $(NAME)
